k8s/monolith-and-users-ms/monolith.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monolith
  name: monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monolith
    spec:
      containers:
      - name: monolith
        image: javiergarciagon/microservice-booksapp:1.0.4
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: monolith
  labels:
    app: monolith
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: monolith-port
  selector:
    app: monolith
  type: LoadBalancer
