k8s/monolith-and-users-ms/users-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users-microservice
  name: users-microservice
spec:
  selector:
    matchLabels:
      app: users-microservice
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: users-microservice
    spec:
      containers:
      - name: users-microservice
        image: javiergarciagon/microservice-booksapp-users:1.0.4
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users-microservice
  name: users-microservice
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: users-port-ms
  selector:
    app: users-microservice
  type: ClusterIP
